manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: subject-82265640-svc
    namespace: "82265640"
spec:
    ports:
    - port: 8080 
    selector:
        app: subject-82265640
