manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: subject-82265640-ingress
  namespace: "82265640"
spec:
  ingressClassName: ingress-internal
  rules:
  - host: 82265640.ce-aa.kubepia.net
    http:
      paths:
      - path: /
        backend:
          service:
            name: subject-82265640-svc
            port:
              number: 8080
        pathType: Prefix
